2008-09-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9362: htmlArea RTE: highlight active items in context menu as in toolbar
	* Follow up to #9354: htmlArea RTE: no default css rule is provided for indentation: px to em

2008-09-16  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9360: TypoScript Object Browser interprets HTML Tags in comments (Thanks to Stefano Kowalke)

2008-09-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9310: table border colour popups appear only when textcolour button is shown
	* Fixed bug #9354: htmlArea RTE: no default css rule is provided for indentation

2008-09-15  Ingo Renner  <ingo@typo3.org>

	* Added feature 9097: Introduce a new caching framework (backported from FLOW3)
	* Fixed bug 9283: declare marker handling functions of t3lib_parsehtml static

2008-09-14  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #7595: Docheaders: Module Admin tools > Indexing: No docheader (Thanks to Christian Kuhn, initial patch by Patrick Broens)
	* Fixed bug #7534: Docheaders: Wizard Table: No docheader (Thanks to Christian Kuhn, initial patch by Patrick Broens)
	* Fixed bug #7536: Docheaders: Wizard Forms: No docheader (Thanks to Christian Kuhn and Steffen Kamper, initial fix by Patrick Broens)
	* Updated NEWS.txt for #9167
	* Followup to #9167: Mark extension as write protected: Option now called "excludeFromUpdates"
	* Fixed Bug #8621: Whitespace and CGL cleanup for class.tx_opendocs.php (Thanks to Stefano Kowalke)
	* Fixed Bug #847: error in tslib_fe->getFromCache() (Thanks to Susanne Moog)

2008-09-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9308: htmlArea RTE: link on colour name doesn't set colour

2008-09-14  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #3687: Disable "versioning" and "moreoptions"-menuitem via contextMenu.[key].disableItems in User TSconfig (thanks to Susanne Moog)